<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="@string/bttn_start_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bttn_init_chat"
        app:layout_constraintRight_toRightOf="@+id/greeting_message_text"
        android:layout_marginRight="-6dp"
        android:layout_marginEnd="-6dp"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/greeting_message_text"
        android:contentDescription="@string/bttn_start_chat"/>

    <TextView
        android:text="@string/label_greeting_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message_label"
        app:layout_constraintLeft_toLeftOf="@+id/greeting_message_text"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/greeting_message_text"
        android:text="@string/greeting_message"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/message_label"
        app:layout_constraintHorizontal_bias="0.52" />

</android.support.constraint.ConstraintLayout>