<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="340dp"
    tools:layout_editor_absoluteX="82dp"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/card_background"
    android:background="@color/card_background"
    android:layout_marginBottom="12dp">

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">


        <ImageButton
            android:layout_width="36dp"
            android:layout_height="30dp"
            app:srcCompat="@mipmap/delete_instance"
            android:id="@+id/main_bttn_del"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/cd_message_delete"/>

        <TextView
            android:text="@string/tmp_web_domain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/web_domain"
            android:textAllCaps="true"
            android:textSize="18sp"
            tools:textStyle="bold"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="@+id/main_bttn_del"
            android:layout_marginTop="72dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/count"
            tools:text="7"
            android:background="@drawable/message_count"
            android:textAlignment="center"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="8dp" />

        <ImageView
            android:layout_width="87dp"
            android:layout_height="88dp"
            app:srcCompat="@mipmap/fist_grey"
            android:id="@+id/fist_logo"
            app:layout_constraintTop_toBottomOf="@+id/count"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:text="@string/label_created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/web_domain"
            app:layout_constraintRight_toLeftOf="@+id/main_timestamp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_timestamp"
            app:layout_constraintTop_toBottomOf="@+id/web_domain"
            app:layout_constraintRight_toRightOf="@+id/web_domain"
            tools:text="3 hours ago" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/msg_ago"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/count"
            android:layout_marginLeft="8dp"
            tools:text="15 seconds ago"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/main_bttn_del" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>

